--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,13 +7,14 @@
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #6aa84f;
---ifm-color-primary-dark: #5f9747;
---ifm-color-primary-darker: #5a8f43;
---ifm-color-primary-darkest: #4a7637;
---ifm-color-primary-light: #77b35d;
---ifm-color-primary-lighter: #7eb765;
---ifm-color-primary-lightest: #93c37f;
+  --ifm-color-primary-dark: #5f9747;
+  --ifm-color-primary-darker: #5a8f43;
+  --ifm-color-primary-darkest: #4a7637;
+  --ifm-color-primary-light: #77b35d;
+  --ifm-color-primary-lighter: #7eb765;
+  --ifm-color-primary-lightest: #93c37f;
   --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 .docusaurus-highlight-code-line {
@@ -21,6 +22,10 @@
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
+}
+
+[data-theme='dark'] {
+  --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.2);
 }
 
 html[data-theme='dark'] .docusaurus-highlight-code-line {
