--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,11 +6,11 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #6aa84f;
-  --ifm-color-primary-dark: #5f9747;
+  --ifm-color-primary: #00b530;
+  --ifm-color-primary-dark: #00b530;
   --ifm-color-primary-darker: #5a8f43;
   --ifm-color-primary-darkest: #4a7637;
-  --ifm-color-primary-light: #77b35d;
+  --ifm-color-primary-light: #00e771;
   --ifm-color-primary-lighter: #7eb765;
   --ifm-color-primary-lightest: #93c37f;
   --ifm-code-font-size: 95%;
@@ -25,6 +25,8 @@
 }
 
 [data-theme='dark'] {
+  --ifm-color-primary: #00e771;
+  --ifm-heading-color: black;
   --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.2);
 }
 
@@ -33,6 +35,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 }
 
 h1 {
+  border-radius: 20px;
   background-color: #F9F9F9;
   background-image: url('/img/academy-gear.png');
   background-position: 50%;
